--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
->
-	<!-- This is only here because Maven requires it to make a war. -->
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
+  <display-name>tomcat_webapp_demo</display-name>
+  <servlet>
+  <servlet-name>tomcat_webapp_demo</servlet-name>
+  <servlet-class>com.tomcat_webapp_demo.tomcat_webapp_demo</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>tomcat_webapp_demo</servlet-name>
+  <url-pattern>/hello</url-pattern>
+  </servlet-mapping>
 </web-app>
