--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
         <version>11.0.15</version>
       </plugin>
     </plugins>
+
+    <!-- The output .war file's name, which will be the name of the webapp. -->
+    <finalName>${project.artifactId}</finalName>
+
   </build>
   <dependencies>
     <dependency>
